DSL_Parser/antlr4/project/EcoBotCpp/EcoBotParser.cpp

// Generated from EcoBot.g4 by ANTLR 4.13.2


#include "EcoBotListener.h"
#include "EcoBotVisitor.h"

#include "EcoBotParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct EcoBotParserStaticData final {
  EcoBotParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  EcoBotParserStaticData(const EcoBotParserStaticData&) = delete;
  EcoBotParserStaticData(EcoBotParserStaticData&&) = delete;
  EcoBotParserStaticData& operator=(const EcoBotParserStaticData&) = delete;
  EcoBotParserStaticData& operator=(EcoBotParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ecobotParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<EcoBotParserStaticData> ecobotParserStaticData = nullptr;

void ecobotParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ecobotParserStaticData != nullptr) {
    return;
  }
#else
  assert(ecobotParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<EcoBotParserStaticData>(
    std::vector<std::string>{
      "program", "intentDef", "stmtList", "stmt", "replyStmt", "requireStmt", 
      "callStmt", "serviceCall", "ifStmt", "exitStmt", "block", "condition", 
      "value", "argList"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "';'", "'='", "'.'", "'('", "')'", "'=='", "'!='", 
      "'>'", "'<'", "','", "'intent'", "'reply'", "'require'", "'call'", 
      "'if'", "'else'", "'exit'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "K_INTENT", "K_REPLY", 
      "K_REQUIRE", "K_CALL", "K_IF", "K_ELSE", "K_EXIT", "ID", "STRING", 
      "NUM", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ecobotParserStaticData = std::move(staticData);
}

}

EcoBotParser::EcoBotParser(TokenStream *input) : EcoBotParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

EcoBotParser::EcoBotParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  EcoBotParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ecobotParserStaticData->atn, ecobotParserStaticData->decisionToDFA, ecobotParserStaticData->sharedContextCache, options);
}

EcoBotParser::~EcoBotParser() {
  delete _interpreter;
}

const atn::ATN& EcoBotParser::getATN() const {
  return *ecobotParserStaticData->atn;
}

std::string EcoBotParser::getGrammarFileName() const {
  return "EcoBot.g4";
}

const std::vector<std::string>& EcoBotParser::getRuleNames() const {
  return ecobotParserStaticData->ruleNames;
}

const dfa::Vocabulary& EcoBotParser::getVocabulary() const {
  return ecobotParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView EcoBotParser::getSerializedATN() const {
  return ecobotParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

EcoBotParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EcoBotParser::ProgramContext::EOF() {
  return getToken(EcoBotParser::EOF, 0);
}

std::vector<EcoBotParser::IntentDefContext *> EcoBotParser::ProgramContext::intentDef() {
  return getRuleContexts<EcoBotParser::IntentDefContext>();
}

EcoBotParser::IntentDefContext* EcoBotParser::ProgramContext::intentDef(size_t i) {
  return getRuleContext<EcoBotParser::IntentDefContext>(i);
}


size_t EcoBotParser::ProgramContext::getRuleIndex() const {
  return EcoBotParser::RuleProgram;
}

void EcoBotParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void EcoBotParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any EcoBotParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::ProgramContext* EcoBotParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, EcoBotParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EcoBotParser::K_INTENT) {
      setState(28);
      intentDef();
      setState(33);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(34);
    match(EcoBotParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntentDefContext ------------------------------------------------------------------

EcoBotParser::IntentDefContext::IntentDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EcoBotParser::IntentDefContext::K_INTENT() {
  return getToken(EcoBotParser::K_INTENT, 0);
}

tree::TerminalNode* EcoBotParser::IntentDefContext::ID() {
  return getToken(EcoBotParser::ID, 0);
}

EcoBotParser::StmtListContext* EcoBotParser::IntentDefContext::stmtList() {
  return getRuleContext<EcoBotParser::StmtListContext>(0);
}


size_t EcoBotParser::IntentDefContext::getRuleIndex() const {
  return EcoBotParser::RuleIntentDef;
}

void EcoBotParser::IntentDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIntentDef(this);
}

void EcoBotParser::IntentDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIntentDef(this);
}


std::any EcoBotParser::IntentDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitIntentDef(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::IntentDefContext* EcoBotParser::intentDef() {
  IntentDefContext *_localctx = _tracker.createInstance<IntentDefContext>(_ctx, getState());
  enterRule(_localctx, 2, EcoBotParser::RuleIntentDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(EcoBotParser::K_INTENT);
    setState(37);
    match(EcoBotParser::ID);
    setState(38);
    match(EcoBotParser::T__0);
    setState(39);
    stmtList();
    setState(40);
    match(EcoBotParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

EcoBotParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<EcoBotParser::StmtContext *> EcoBotParser::StmtListContext::stmt() {
  return getRuleContexts<EcoBotParser::StmtContext>();
}

EcoBotParser::StmtContext* EcoBotParser::StmtListContext::stmt(size_t i) {
  return getRuleContext<EcoBotParser::StmtContext>(i);
}


size_t EcoBotParser::StmtListContext::getRuleIndex() const {
  return EcoBotParser::RuleStmtList;
}

void EcoBotParser::StmtListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtList(this);
}

void EcoBotParser::StmtListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtList(this);
}


std::any EcoBotParser::StmtListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitStmtList(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::StmtListContext* EcoBotParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 4, EcoBotParser::RuleStmtList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1818624) != 0)) {
      setState(42);
      stmt();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

EcoBotParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EcoBotParser::ReplyStmtContext* EcoBotParser::StmtContext::replyStmt() {
  return getRuleContext<EcoBotParser::ReplyStmtContext>(0);
}

EcoBotParser::RequireStmtContext* EcoBotParser::StmtContext::requireStmt() {
  return getRuleContext<EcoBotParser::RequireStmtContext>(0);
}

EcoBotParser::CallStmtContext* EcoBotParser::StmtContext::callStmt() {
  return getRuleContext<EcoBotParser::CallStmtContext>(0);
}

EcoBotParser::IfStmtContext* EcoBotParser::StmtContext::ifStmt() {
  return getRuleContext<EcoBotParser::IfStmtContext>(0);
}

EcoBotParser::ExitStmtContext* EcoBotParser::StmtContext::exitStmt() {
  return getRuleContext<EcoBotParser::ExitStmtContext>(0);
}


size_t EcoBotParser::StmtContext::getRuleIndex() const {
  return EcoBotParser::RuleStmt;
}

void EcoBotParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void EcoBotParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


std::any EcoBotParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::StmtContext* EcoBotParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, EcoBotParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(53);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EcoBotParser::K_REPLY: {
        enterOuterAlt(_localctx, 1);
        setState(48);
        replyStmt();
        break;
      }

      case EcoBotParser::K_REQUIRE: {
        enterOuterAlt(_localctx, 2);
        setState(49);
        requireStmt();
        break;
      }

      case EcoBotParser::K_CALL:
      case EcoBotParser::ID: {
        enterOuterAlt(_localctx, 3);
        setState(50);
        callStmt();
        break;
      }

      case EcoBotParser::K_IF: {
        enterOuterAlt(_localctx, 4);
        setState(51);
        ifStmt();
        break;
      }

      case EcoBotParser::K_EXIT: {
        enterOuterAlt(_localctx, 5);
        setState(52);
        exitStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReplyStmtContext ------------------------------------------------------------------

EcoBotParser::ReplyStmtContext::ReplyStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EcoBotParser::ReplyStmtContext::K_REPLY() {
  return getToken(EcoBotParser::K_REPLY, 0);
}

tree::TerminalNode* EcoBotParser::ReplyStmtContext::STRING() {
  return getToken(EcoBotParser::STRING, 0);
}


size_t EcoBotParser::ReplyStmtContext::getRuleIndex() const {
  return EcoBotParser::RuleReplyStmt;
}

void EcoBotParser::ReplyStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReplyStmt(this);
}

void EcoBotParser::ReplyStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReplyStmt(this);
}


std::any EcoBotParser::ReplyStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitReplyStmt(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::ReplyStmtContext* EcoBotParser::replyStmt() {
  ReplyStmtContext *_localctx = _tracker.createInstance<ReplyStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, EcoBotParser::RuleReplyStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(EcoBotParser::K_REPLY);
    setState(56);
    match(EcoBotParser::STRING);
    setState(57);
    match(EcoBotParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RequireStmtContext ------------------------------------------------------------------

EcoBotParser::RequireStmtContext::RequireStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EcoBotParser::RequireStmtContext::K_REQUIRE() {
  return getToken(EcoBotParser::K_REQUIRE, 0);
}

tree::TerminalNode* EcoBotParser::RequireStmtContext::ID() {
  return getToken(EcoBotParser::ID, 0);
}

tree::TerminalNode* EcoBotParser::RequireStmtContext::STRING() {
  return getToken(EcoBotParser::STRING, 0);
}


size_t EcoBotParser::RequireStmtContext::getRuleIndex() const {
  return EcoBotParser::RuleRequireStmt;
}

void EcoBotParser::RequireStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRequireStmt(this);
}

void EcoBotParser::RequireStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRequireStmt(this);
}


std::any EcoBotParser::RequireStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitRequireStmt(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::RequireStmtContext* EcoBotParser::requireStmt() {
  RequireStmtContext *_localctx = _tracker.createInstance<RequireStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, EcoBotParser::RuleRequireStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(EcoBotParser::K_REQUIRE);
    setState(60);
    match(EcoBotParser::ID);
    setState(61);
    match(EcoBotParser::STRING);
    setState(62);
    match(EcoBotParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallStmtContext ------------------------------------------------------------------

EcoBotParser::CallStmtContext::CallStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EcoBotParser::CallStmtContext::K_CALL() {
  return getToken(EcoBotParser::K_CALL, 0);
}

EcoBotParser::ServiceCallContext* EcoBotParser::CallStmtContext::serviceCall() {
  return getRuleContext<EcoBotParser::ServiceCallContext>(0);
}

tree::TerminalNode* EcoBotParser::CallStmtContext::ID() {
  return getToken(EcoBotParser::ID, 0);
}


size_t EcoBotParser::CallStmtContext::getRuleIndex() const {
  return EcoBotParser::RuleCallStmt;
}

void EcoBotParser::CallStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCallStmt(this);
}

void EcoBotParser::CallStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCallStmt(this);
}


std::any EcoBotParser::CallStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitCallStmt(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::CallStmtContext* EcoBotParser::callStmt() {
  CallStmtContext *_localctx = _tracker.createInstance<CallStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, EcoBotParser::RuleCallStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EcoBotParser::ID) {
      setState(64);
      match(EcoBotParser::ID);
      setState(65);
      match(EcoBotParser::T__3);
    }
    setState(68);
    match(EcoBotParser::K_CALL);
    setState(69);
    serviceCall();
    setState(70);
    match(EcoBotParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ServiceCallContext ------------------------------------------------------------------

EcoBotParser::ServiceCallContext::ServiceCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> EcoBotParser::ServiceCallContext::ID() {
  return getTokens(EcoBotParser::ID);
}

tree::TerminalNode* EcoBotParser::ServiceCallContext::ID(size_t i) {
  return getToken(EcoBotParser::ID, i);
}

EcoBotParser::ArgListContext* EcoBotParser::ServiceCallContext::argList() {
  return getRuleContext<EcoBotParser::ArgListContext>(0);
}


size_t EcoBotParser::ServiceCallContext::getRuleIndex() const {
  return EcoBotParser::RuleServiceCall;
}

void EcoBotParser::ServiceCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterServiceCall(this);
}

void EcoBotParser::ServiceCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitServiceCall(this);
}


std::any EcoBotParser::ServiceCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitServiceCall(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::ServiceCallContext* EcoBotParser::serviceCall() {
  ServiceCallContext *_localctx = _tracker.createInstance<ServiceCallContext>(_ctx, getState());
  enterRule(_localctx, 14, EcoBotParser::RuleServiceCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(EcoBotParser::ID);
    setState(73);
    match(EcoBotParser::T__4);
    setState(74);
    match(EcoBotParser::ID);
    setState(75);
    match(EcoBotParser::T__5);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EcoBotParser::ID) {
      setState(76);
      argList();
    }
    setState(79);
    match(EcoBotParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

EcoBotParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> EcoBotParser::IfStmtContext::K_IF() {
  return getTokens(EcoBotParser::K_IF);
}

tree::TerminalNode* EcoBotParser::IfStmtContext::K_IF(size_t i) {
  return getToken(EcoBotParser::K_IF, i);
}

std::vector<EcoBotParser::ConditionContext *> EcoBotParser::IfStmtContext::condition() {
  return getRuleContexts<EcoBotParser::ConditionContext>();
}

EcoBotParser::ConditionContext* EcoBotParser::IfStmtContext::condition(size_t i) {
  return getRuleContext<EcoBotParser::ConditionContext>(i);
}

std::vector<EcoBotParser::BlockContext *> EcoBotParser::IfStmtContext::block() {
  return getRuleContexts<EcoBotParser::BlockContext>();
}

EcoBotParser::BlockContext* EcoBotParser::IfStmtContext::block(size_t i) {
  return getRuleContext<EcoBotParser::BlockContext>(i);
}

std::vector<tree::TerminalNode *> EcoBotParser::IfStmtContext::K_ELSE() {
  return getTokens(EcoBotParser::K_ELSE);
}

tree::TerminalNode* EcoBotParser::IfStmtContext::K_ELSE(size_t i) {
  return getToken(EcoBotParser::K_ELSE, i);
}


size_t EcoBotParser::IfStmtContext::getRuleIndex() const {
  return EcoBotParser::RuleIfStmt;
}

void EcoBotParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}

void EcoBotParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}


std::any EcoBotParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::IfStmtContext* EcoBotParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, EcoBotParser::RuleIfStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(EcoBotParser::K_IF);
    setState(82);
    match(EcoBotParser::T__5);
    setState(83);
    condition();
    setState(84);
    match(EcoBotParser::T__6);
    setState(85);
    block();
    setState(95);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(86);
        match(EcoBotParser::K_ELSE);
        setState(87);
        match(EcoBotParser::K_IF);
        setState(88);
        match(EcoBotParser::T__5);
        setState(89);
        condition();
        setState(90);
        match(EcoBotParser::T__6);
        setState(91);
        block(); 
      }
      setState(97);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EcoBotParser::K_ELSE) {
      setState(98);
      match(EcoBotParser::K_ELSE);
      setState(99);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExitStmtContext ------------------------------------------------------------------

EcoBotParser::ExitStmtContext::ExitStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EcoBotParser::ExitStmtContext::K_EXIT() {
  return getToken(EcoBotParser::K_EXIT, 0);
}


size_t EcoBotParser::ExitStmtContext::getRuleIndex() const {
  return EcoBotParser::RuleExitStmt;
}

void EcoBotParser::ExitStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExitStmt(this);
}

void EcoBotParser::ExitStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExitStmt(this);
}


std::any EcoBotParser::ExitStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitExitStmt(this);
  else
    return visitor->visitChildren(this);
}

EcoBotParser::ExitStmtContext* EcoBotParser::exitStmt() {
  ExitStmtContext *_localctx = _tracker.createInstance<ExitStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, EcoBotParser::RuleExitStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(EcoBotParser::K_EXIT);
    setState(103);
    match(EcoBotParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

EcoBotParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EcoBotParser::StmtListContext* EcoBotParser::BlockContext::stmtList() {
  return getRuleContext<EcoBotParser::StmtListContext>(0);
}


size_t EcoBotParser::BlockContext::getRuleIndex() const {
  return EcoBotParser::RuleBlock;
}

void EcoBotParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void EcoBotParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EcoBotListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any EcoBotParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EcoBotVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}
